Updated junit version and integrated tests.