@@ -11,4 +11,43 @@
 
   <artifactId>de.monkeyworks.natspec.library.swtbot.tests</artifactId>
   <packaging>eclipse-test-plugin</packaging>
+
+  	<properties>
+		<os-jvm-flags /> <!-- for the default case -->
+	</properties>
+
+	<profiles>
+		<profile>
+			<id>macosx-jvm-flags</id>
+			<activation>
+				<os>
+					<family>mac</family>
+				</os>
+			</activation>
+			<properties>
+				<os-jvm-flags>-XstartOnFirstThread</os-jvm-flags>
+			</properties>
+		</profile>
+	</profiles>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-surefire-plugin</artifactId>
+				<version>${tycho.version}</version>
+				<configuration>
+					<includes>
+						<include>**/HelloWorldExample.java</include>
+					</includes>
+					<useUIHarness>true</useUIHarness>
+					<useUIThread>false</useUIThread>
+					<product>org.eclipse.sdk.ide</product>
+					<application>org.eclipse.ui.ide.workbench</application>
+					<argLine>-Dorg.eclipse.swtbot.search.timeout=30000 -XX:MaxPermSize=256m -Xms40m -Xmx512m ${os-jvm-flags}</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
